tdf#90721 Line color initial behavior similar to fill color

Change-Id: Icf6d35d188f57e1b91da1ce5947f35c97c4f2e78